--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.1'
@@ -18,6 +18,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        google()
         
     }
 }
